This is just to motivate myself to improve a little bit every day :)

Best: 11

03-04-2024
Streak: 11
Learned:
    -Read about compose modifiers
Did:
    -Separate Main Menu Buttons into separate file, add background image to them
    -Try to make layout work and respect individual item weights, but it is very obviously
        broken in landscape with the current setup
    -Fix menu buttons not displaying how I want, though still need to swap between row/column
        based on device orientation

02-04-2024
Streak: 10
Learned:
Did:
    -Import image resources for main menu + buttons
    -Add background image to Main Menu - static for now

01-04-2024
Streak: 9
Learned:
Did:
    -Change default colours for light mode in theme

31-03-2024
Streak: 8
Learned:
Did:
    -Just get rid of some hardcoded strings

30-03-2024
Streak: 7
Learned:
Did:
    -Set up basic navigation from Main Menu to DayPart Menu, three buttons doing the same thing

29-03-2024
Streak: 6
Learned:
Did:
    -Start implementing Navigation Host
    -Add scaffolding (just files) for Main Menu screen, and reusable screen for Morning, Midday,
        Evening Menus called DayPart Menu
    -Set up minimal placeholder for MainMenu screen, mount it to main screen on start up
    -Add 'templateComponent' to organisation directory as a quick copy-paste blue print
        for future components

28-03-2024
Streak: 5
Learned:
    -Read about Navigation Host, Graph, Controller
Did:
    -Add over-engineered 'Calendar Fragment' for displaying current day, using MVVM pattern
    -Change project structure slightly: data layer shouldn't use '@Composable' annotation,
        presentation layer should only import from data layer in ViewModels.

27-03-2024
Streak: 4
Learned:
Did:
    -Messed about with trying to set up an example component that adheres to MVVM pattern, but
        couldn't get the ViewModel class to work - something about kotlin.AutoCloseable not being
        accessible.