@@ -8,5 +8,7 @@ Set dark theme colours, move theme colours to their own files
 Figure out how to navigate to different screens based on navigation arguments
 Set transition animations
 Standardise padding and font sizes, define them in a global style file that can be referenced by ui
+Fix row column layouts when switching from landscape to portrait
+Put backlight on title text so it is readable against any background
 
 Unit tests
